--- a/Nivell 2/styles/style.css
+++ b/Nivell 2/styles/style.css
@@ -26,8 +26,8 @@
     position: relative;
     background-color: rgb(251, 255, 24);
     animation-name: tennis-ball;
-    animation-duration: 2.5s;
-    animation-timing-function: ease-in-out;
+    animation-duration: 4s;
+    animation-timing-function: cubic-bezier(0.8, 0.8, 0.8, 1.0); /* CORRECCION */
     animation-iteration-count: infinite;
     animation-direction: alternate;
 }
@@ -35,8 +35,8 @@
 /* KEYFRAMES */
 
 @keyframes tennis-ball {
-    0% {transform: translate(0px, 20px); width: 150px; height: 150px;}
-    33% {transform: translate(300px, 650px); width: 170px; height: 150px;}
-    66% {transform: translate(650px, 30px); width: 150px; height: 150px;}
-    100% {transform: translate(825px, 650px); width: 170px; height: 150px;}
+    0% {transform: translate(0px, 20px); width: 150px; height: 150px; animation-timing-function: ease-in-out;}
+    33% {transform: translate(300px, 650px); width: 180px; height: 150px; animation-timing-function: ease-in-out;}
+    66% {transform: translate(650px, 30px); width: 150px; height: 150px; animation-timing-function: ease-in-out;}
+    100% {transform: translate(820px, 650px); width: 180px; height: 150px; animation-timing-function: ease-out;}
 }
